html/tiles.css
body {
    background-color: black;
}

.tile {
    transition: all 0.4s ease-in-out;
    position: relative;
    width: 19.5%;
    background-color: black;
    float: left;
    margin: 0.25%;
    z-index:1;
}

.tile:hover {
    z-index:10;
    background-color: black;
    transform: scale(1.1);
}

.tile:before {
    content: "";
    display: block;
    padding-top: 100%;
}

